# qdao

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md  conftest.py  constants.py  example.ipynb  example.py  pyproject.toml  random_circuit.qasm  random_circuit1.qasm  requirements.txt  setup.py  tox.ini
.github/workflows/: unit_test.yml
examples/: getting_started.py  getting_started_distributed.py  partitionor_test_randomcircuits.py  result.out  test.py  test1.py  test2.py
qdao/: README.md  base_circuit_wrapper.py  circuit.py  converters.py  engine.py  exceptions.py  executor.py  manager.py  manager_sample.py  simulator.py  test.py  util.py
qdao/benchmarks/: README.md  SUPPORTED_GATES  cirq_test.py  ddqsim.py  mindquantum_test.py  pqc.py  qiskit_test.py  qnn.py  qsimcirq_test.py  quafu_test.py  rqc.py  vqc_raw.py  vqe.py
qdao/benchmarks/qasm/: a.rqc_28_0.qasm  a.rqc_28_1.qasm  a.rqc_30_0.qasm  a.rqc_30_1.qasm  a.vqa.qnn_27_0.qasm  a.vqa.qnn_27_1.qasm  a.vqa.qnn_29_1.qasm  a.vqa.vqe_27.qasm  b.hls_28.qasm  b.iqp_28.qasm  circuit_n28_m14_s2_e6_pEFGH.qasm  circuit_n28_m14_s3_e6_pEFGH.qasm  circuit_n28_m14_s4_e6_pEFGH.qasm  graph_state-28.qasm  (+111 more)
qdao/qiskit/: annotated_operation.py  circ_append.py  circuit.py  gate.py  initializer.py  instruction.py  simulator.py  state_preparation.py  utils.py
qdao/qsim/: __init__.py  circuit.py  test.ipynb
qdao/quafu/: circuit.py  simulator.py
qdao/tools/: example_circ.py
test/qdao/: circuit.py  engine.py  manager.py  util.py
tests/: qdao.py
tests/qdao/: circuit_test.py  engine_test.py  manager_test.py  util_test.py
(+6 files in other folders)
