[project]
name = "qdao"
version = "0.1.0"
dependencies = [
    "cirq_core==1.1.0",
    "matplotlib==3.6.3",
    "numpy==1.23.4",
    "qiskit>=0.39.0,<1.0.0",
    "qiskit-aer==0.13.0",
    "setuptools>=65.5.1",
    "sympy==1.11.1",
    "pyquafu==0.3.5",
    "qutils @ git+https://github.com/Zhaoyilunnn/qutils.git@tags/v0.1.0"
]

[tool.setuptools.packages.find]
include = ["qdao"]
